tests/baselines/reference/everyTypeWithAnnotationAndInvalidInitializer.errors.txt
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(34,5): error TS2322: Type '"this is a string"' is not assignable to type 'number'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(35,5): error TS2322: Type '9.9' is not assignable to type 'string'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(36,5): error TS2322: Type '9.9' is not assignable to type 'Date'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(38,5): error TS2322: Type '9.9' is not assignable to type 'void'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(40,5): error TS2741: Property 'id' is missing in type 'D<unknown>' but required in type 'I'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(41,5): error TS2741: Property 'id' is missing in type 'D<unknown>' but required in type 'C'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(42,5): error TS2739: Type 'C' is missing the following properties from type 'D<string>': source, recurse, wrapped
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(43,28): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(44,5): error TS2322: Type 'C' is not assignable to type '{ id: string; }'.
  Types of property 'id' are incompatible.
    Type 'number' is not assignable to type 'string'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(46,5): error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(47,5): error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(48,32): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(50,5): error TS2322: Type 'typeof N' is not assignable to type 'typeof M'.
  Types of property 'A' are incompatible.
    Type 'typeof N.A' is not assignable to type 'typeof M.A'.
      Property 'name' is missing in type 'N.A' but required in type 'M.A'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(51,5): error TS2322: Type 'N.A' is not assignable to type 'M.A'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(52,5): error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: number) => string'.
  Type 'boolean' is not assignable to type 'string'.


==== tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts (15 errors) ====
    interface I {
        id: number;
    }
    
    class C implements I {
        id: number;
    }
    
    class D<T>{
        source: T;
        recurse: D<T>;
        wrapped: D<D<T>>
    }
    
    function F(x: string): number { return 42; }
    function F2(x: number): boolean { return x < 42; }
    
    module M {
        export class A {
            name: string;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    module N {
        export class A {
            id: number;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    var aNumber: number = 'this is a string';
        ~~~~~~~
!!! error TS2322: Type '"this is a string"' is not assignable to type 'number'.
    var aString: string = 9.9;
        ~~~~~~~
!!! error TS2322: Type '9.9' is not assignable to type 'string'.
    var aDate: Date = 9.9;
        ~~~~~
!!! error TS2322: Type '9.9' is not assignable to type '{|Date|0|}'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:729:11
    
    var aVoid: void = 9.9;
        ~~~~~
!!! error TS2322: Type '9.9' is not assignable to type 'void'.
    
    var anInterface: I = new D();
        ~~~~~~~~~~~
!!! error TS2741: Property 'id' is missing in type '{|D|0|}<unknown>' but required in type '{|I|1|}'.
!!! related TS2728 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:2:5: 'id' is declared here.
!!! annotated symbol 0 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:9:7
!!! annotated symbol 1 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:1:11
    var aClass: C = new D();
        ~~~~~~
!!! error TS2741: Property 'id' is missing in type '{|D|0|}<unknown>' but required in type '{|C|1|}'.
!!! related TS2728 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:6:5: 'id' is declared here.
!!! annotated symbol 0 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:9:7
!!! annotated symbol 1 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:5:7
    var aGenericClass: D<string> = new C();
        ~~~~~~~~~~~~~
!!! error TS2739: Type 'C' is missing the following properties from type 'D<string>': source, recurse, wrapped
    var anObjectLiteral: I = { id: 'a string' };
                               ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:2:5: The expected type comes from property 'id' which is declared here on type 'I'
    var anOtherObjectLiteral: { id: string } = new C();
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|C|0|}' is not assignable to type '{ {|id|1|}: string; }'.
!!! error TS2322:   Types of property 'id' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:5:7
!!! annotated symbol 1 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:44:29
    
    var aFunction: typeof F = F2;
        ~~~~~~~~~
!!! error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    var anOtherFunction: (x: string) => number = F2;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    var aLambda: typeof F = (x) => 'a string';
                                   ~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6502 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:15:10: The expected type comes from the return type of this signature.
    
    var aModule: typeof M = N;
        ~~~~~~~
!!! error TS2322: Type 'typeof {|N|0|}' is not assignable to type 'typeof {|M|1|}'.
!!! error TS2322:   Types of property 'A' are incompatible.
!!! error TS2322:     Type 'typeof {|N|2|}.{|A|3|}' is not assignable to type 'typeof {|M|4|}.{|A|5|}'.
!!! error TS2322:       Property 'name' is missing in type '{|N|6|}.{|A|7|}' but required in type '{|M|8|}.{|A|9|}'.
!!! related TS2728 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:20:9: 'name' is declared here.
!!! annotated symbol 0 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:26:8
!!! annotated symbol 1 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:18:8
!!! annotated symbol 2 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:26:8
!!! annotated symbol 3 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:27:18
!!! annotated symbol 4 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:18:8
!!! annotated symbol 5 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:19:18
!!! annotated symbol 6 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:26:8
!!! annotated symbol 7 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:27:18
!!! annotated symbol 8 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:18:8
!!! annotated symbol 9 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:19:18
    var aClassInModule: M.A = new N.A();
        ~~~~~~~~~~~~~~
!!! error TS2322: Type '{|N|0|}.{|A|1|}' is not assignable to type '{|M|2|}.{|A|3|}'.
!!! annotated symbol 0 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:26:8
!!! annotated symbol 1 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:27:18
!!! annotated symbol 2 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:18:8
!!! annotated symbol 3 tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts:19:18
    var aFunctionInModule: typeof M.F2 = F2;
        ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: number) => string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
    
    